--- a/radio.css
+++ b/radio.css
@@ -8,8 +8,11 @@ body{
 }
 header{
     background-color: #8b868688;
-    position: sticky;
-    top: 0; 
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1000;
     
 }
 nav{
@@ -51,16 +54,17 @@ h3{
        
 }
 .line{
-    /* width: 200%; */
+   
     color: white;
-    outline: 1px solid white;
-    /* border: none; */
+    outline: 1px solid white ;
     line-height: 0;
     margin-top: 0;
     margin-bottom: 0;
-    width: 28rem;
+    width: 25rem;
    margin-left: 50px;
- 
+    position: sticky;
+    left: 0;
+    
     
 }
 
@@ -114,12 +118,11 @@ h2{
 
 .grid-container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-    gap: 3px;
-    grid-auto-rows: 200px;
-    grid-auto-flow: dense;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 8px;
     justify-items: center;
-    padding: 13px;
+    padding: 13px; 
+    padding: 10px;
    
     
    
@@ -127,39 +130,41 @@ h2{
    
 }
 .grid-item{
-   align-items: center;
-   padding: 10px;
-   /* padding-bottom: 150px; */
-   line-height: 0;
-   /* background-color: #415E72; */
-   
+    align-items: center;
+    padding-bottom: 45px;
 }
 
 
 
 .grid-item img {
-    width: 160px;
-    height: auto;
-   
+     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    
+    
  
 }
 h4{
 
  color: white;
- margin-bottom: 40px;
+ text-align: left;
+ align-items: center;
 
- justify-items: center;
- margin-left: 5px;
+ 
  
 }
 
 
 .h4_cont{
     background-color: #415E72;
-    width: 160px;
-   height: 40px;
-    /* justify-content: center; */
-    display: flex;
+   height: 30px;
+  position: relative;
+  bottom: 5px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  
    
 }
 
